# HashCode2017

./: .gitignore  CMakeLists.txt
HashCode2017/: .medium.in.swp  Algo.h  Algo1.h  Algo2.h  Common.h  FindWareHouses.h  Greedy.cpp  Greedy.h  InputLoader.h  KnapsackAlgo.h  Main.cpp  Main.cpp.orig  Makefile  Objects.h  Output.h  ScoreCalculator.h  Simple.cpp  Simple.hpp  SimpleOrder.cpp  SimpleOrder.h  Tools.h  Utilities.h  a.out  allin  main.cpp  main_qian_verify.cpp  output.txt  outputs.txt  qian.cpp  res.txt  test
HashCode2017.xcodeproj/: project.pbxproj
HashCode2017.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
HashCode2017.xcodeproj/project.xcworkspace/xcuserdata/YQF.xcuserdatad/: UserInterfaceState.xcuserstate
HashCode2017.xcodeproj/xcuserdata/Xavier.xcuserdatad/xcschemes/: HashCode2017.xcscheme
HashCode2017.xcodeproj/xcuserdata/YQF.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
HashCode2017.xcodeproj/xcuserdata/YQF.xcuserdatad/xcschemes/: HashCode2017.xcscheme  xcschememanagement.plist
HashCode2017/a.out.dSYM/Contents/Resources/DWARF/: a.out
HashCode2017/output/: kittens.out  me_at_the_zoo.out  trending_today.out  videos_worth_spreading.out
HashCode2017/score_validation/: kittens.out  scores.txt
